# compile-time-init-build

./: .gitignore  README.md  avr-cross.ini  meson.build
examples/blinky/: blink.hpp  config.hpp  core.hpp  interfaces.hpp  log_over_uart.hpp  main.cpp  meson.build  pwm.hpp  serial.hpp
examples/hello_world/: meson.build
subprojects/: avr-libstdcpp.wrap  boost-mp11.wrap  conc.wrap  stdx.wrap
subprojects/packagefiles/avr-libstdcpp/: meson.build
subprojects/packagefiles/conc/: meson.build
subprojects/packagefiles/mp11/: meson.build
subprojects/packagefiles/stdx/: meson.build  relax-tuple-concepts.patch
tools/: gen_serial_monitor_golang.py  gen_str_catalog.py  meson.build
